# UserIdTgBot

./: LICENSE  README.md  pyproject.toml
src/useridtgbot/: bot.py
